tests/baselines/reference/asyncSetter_es5.errors.txt
asyncSetter_es5.ts(2,3): error TS1042: 'async' modifier cannot be used here.


==== asyncSetter_es5.ts (1 errors) ====
    class C {
      async set foo(value) {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
      }
    }